--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   prepare_new_release:
     runs-on: ubuntu-latest
-    #permissions:
+    permissions:
+      actions: write
     #  contents: write
     #  pull-requests: write
     steps:
