--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,9 @@ on:
 jobs:
   prepare_new_release:
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
-    #  contents: write
-    #  pull-requests: write
     steps:
       - name: Trigger other Workflow
         run: |
           gh workflow --repo luka5/go-client run prepare-new-version.yml --field version=${{ github.event.inputs.version }}
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
